--- a/SpringBoot/05. springboot_exception.md
+++ b/SpringBoot/05. springboot_exception.md
@@ -12,6 +12,7 @@ Exception에는 크게 2가지 종류!
 즉, 예외가 발생하는 시점에 프로그램이 실행 전 후 상태에 따라 이를 구분하면 된다.
 
  ![예외처리!](https://user-images.githubusercontent.com/99226598/194728232-8e0d1b0d-b686-4e6e-87e5-d79ee6ac7db8.png)
+ 하늘색 Exception들은 단순 Exception이다  , 초록색 RuntimeException은 프로그램 실행시 발생하는 런타임 Exception 
 
 
 아무튼 이 2가지 종류의 Exception 을 처리하기 위해 자바에서는 java.lang.Exception 이라는 최상위 부모 클래스를 제공합니다. 따라서 모든 Exception 들의 조상은 결국  java.lang.Exception 입니다. 아래 그림을 보겠습니다.
