--- a/Jpa/08. jpa_mapping.md
+++ b/Jpa/08. jpa_mapping.md
@@ -5,7 +5,7 @@
 
 @OnetoMany는 기본 fetch Type전략이 Eager가 아니다.
 
-왜 그러냐면 Board Talbe을 select를 할떄 엄청나게 많은 데이터 개수가 될 수 있다
+왜 그러냐면 Board Ta을 select를 할떄 엄청나게 많은 데이터 개수가 될 수 있다
 그러면 필요하면 데리고 오고 필요하지 않으면 데이터 안들고 올게 해서 기본 fetch 전략이 Lazy 전략이다.
 
 ## lazy , eager
