--- a/SpringBoot/04. springboot_controller_addition.md
+++ b/SpringBoot/04. springboot_controller_addition.md
@@ -60,7 +60,7 @@ Url endPoint에 ?로 시작하면 쿼리스트링
 
 ``` java
 
-// 쿼리 스트링
+// 쿼리 스트링(Query String)
 
 @GetMapiing("/chicken")
 public String chickenqu (String type){
