--- a/SpringBoot/04. springboot_controller_addition.md
+++ b/SpringBoot/04. springboot_controller_addition.md
@@ -28,9 +28,8 @@ http Header의 Content Type 이해
 ContentType을 명시하고 보내야 받는 쪽이 편함
 ex. 쌀 ,보리 , 밀가루 포대가 있는데 앞에 무엇인지 안써놔있으면 일일이 다 검사하고 분류해야하므로 비효율적이다. 코딩에도 content Type을 같이 보내면 다 검사하지 않고 분류해도 되서 편해짐
 
-post,put에만 필요 get,delete는 body가 필요하지 않으므로!
-
-스프링부트는 기본적으로 x-www-form~~ 을 기본값으로 파싱한다.
+post,put에만 필요 
+get,delete는 body가 필요하지 않으므로, 스프링부트는 기본적으로 x-www-form~~ 을 기본값으로 파싱.
 
 
 
