--- a/SpringBoot/04. springboot_controller_addition.md
+++ b/SpringBoot/04. springboot_controller_addition.md
@@ -1,6 +1,6 @@
 ## Spring 내부
 
-> Spring은 servelet으로 형성되어있으며 servelet은 Java로 만들어졌다
+> Spring은 servelet으로 형성되어있으며 servelet은 Java로 만들어졌다.
 
 그러므로 Client가 요청을 할떄마다 JAVA파일을 호출해야한다
 
