--- a/Java/03. operation_java.md
+++ b/Java/03. operation_java.md
@@ -1,1 +1,13 @@
-### 
+### 연산
+> 프로그램에서 데이터를 처리하여 결과를 산출하는 것을 '연산(Operation)' , 다양한 연산자가 존재힘
+
+연산식 예시
+```java
+
+boolean result = ( x + y ) < 5 ; 
+
+// x와 y를 더한 후 5보다 작은지 비교한 후, 결과값 (true or false)를 result 변수에 저장!
+boolean은 결과값은 true, false 로 저장
+```
+
+
