--- a/Java/03. operation_java.md
+++ b/Java/03. operation_java.md
@@ -10,4 +10,11 @@ boolean result = ( x + y ) < 5 ;
 boolean은 결과값은 true, false 로 저장
 ```
 
+#### 연산자의 종류
+
+- 부호 연산자 : + , - 등 변수의 부호를 유지하거나 변경에 사용 -> 즉, 값이 + 인지, - 인지를 결정해줌
+- 증감 연산자 : ++ , -- 를 통해 값을 1증가시키거나 1 감소시킴
+
+★ 증감연사자는 변수 앞에 있으면 우선 변수값을 1증가 또는 1 감소 시킨 후에 다른 연산자 처리 , 
+But, 증감연산자가(++,--) 가 변수 뒤에 있으면 다른 연산자 먼저 처리한 후 변수 값을 1증가 또는 감소 시킴
 
