--- a/Java/03. operation_java.md
+++ b/Java/03. operation_java.md
@@ -16,5 +16,18 @@ boolean은 결과값은 true, false 로 저장
 - 증감 연산자 : ++ , -- 를 통해 값을 1증가시키거나 1 감소시킴
 
 ★ 증감연사자는 변수 앞에 있으면 우선 변수값을 1증가 또는 1 감소 시킨 후에 다른 연산자 처리 , 
-But, 증감연산자가(++,--) 가 변수 뒤에 있으면 다른 연산자 먼저 처리한 후 변수 값을 1증가 또는 감소 시킴
+But, 증감연산자가(++,--) 가 변수 뒤에 있으면 다른 연산자 먼저 처리한 후 변수 값을 1증가 또는 감소 시킴\
+
+```java
+int x = 1;
+int y = 1; 
+
+int result = ++x + 10 ;  // x를 우선 1 증가 시킨 후(2가됨) , 다른 피연산자와 계산함으로 result 값은 12 
+int rusult1 = y++ + 10 ;  // 피연산자인 10과 y의 값인 1을 우선 더해 result1 변수에 넣어 값은 11이 된 후 y의 값을 증가시킨다 y -> 2 
+
+이 둘의 값은 다르다 
+```
+
+- 논리부정 연산자 : true를 false로, false를 true로 변경하므로 boolean타입에만 사용가능 
+- 이항연산자 : + , - ,* , / , %  -> ★ / , % 의 차이점은 /는 나눈 후 몫을 결과값으로 , %는 나눈 후 나머지를 결과값으로 추출  
 
