--- a/Java/03. operation_if_for_java.md
+++ b/Java/03. operation_if_for_java.md
@@ -47,4 +47,16 @@ ex. "kyb" + 3. 3.0; -> kyb33.0 추출됨
 - 대입연산자 : +=, -=,.... != ...
     
 
-## 조건문과 반복문
+## 조건문과 반복
+
+조건문 -> if , else , else if , switch문
+
+#### switch문은 if문 처럼 조건식이 true일 경우 블록 내부의 실행문이 실행되는 것이 아닌, 변수가 어떤 값을 갖느냐에 따라 실행문 선택 
+그러므로 switch문은 변수의 값에 따라서 실행문 결정되기에 if문보다 코드 간결
+
+```java
+
+// switch 예시
+
+int num = (int) (Math.Random() * 6 ) + 1 
+```
