--- a/Java/03. operation_if_for_java.md
+++ b/Java/03. operation_if_for_java.md
@@ -56,7 +56,9 @@ ex. "kyb" + 3. 3.0; -> kyb33.0 추출됨
 
 ```java
 
-// switch 예시
+// switch  사용예시
 
-int num = (int) (Math.Random() * 6 ) + 1 
+int num = (int) (Math.Random() * 6 ) + 1 ; // 주사위 하나 뽑기
+
+switch
 ```
