--- a/Java/03. operation_if_for_java.md
+++ b/Java/03. operation_if_for_java.md
@@ -60,5 +60,26 @@ ex. "kyb" + 3. 3.0; -> kyb33.0 추출됨
 
 int num = (int) (Math.Random() * 6 ) + 1 ; // 주사위 하나 뽑기
 
-switch
+switch(num) {
+
+case 1 : 
+     System.out.println("1번이 나왔습니다.");
+     break;
+case 2 : 
+     System.out.println("2번이 나왔습니다.");
+     break;
+case 3 :
+     System.out.println("3번이 나왔습니다.");
+     break;
+....
+
+
+case 6 :
+     System.out.println("6번이 나왔습니다.");
+     break;
+}
+
+// case 끝에 break가 붙어있는 이유는 다음 case를 실행하지 않고 switch문을 빠져나가기 위해서 이다.
+break가 없다면 다음 case가 연달아 실행되며 무한 루프걸림
+
 ```
