--- a/SpringBoot/04. springboot_controller_addition.md
+++ b/SpringBoot/04. springboot_controller_addition.md
@@ -17,7 +17,7 @@
 ## Http
 
 HTTP에 관련된 정보
-endpoint: http://Ip주소/user/Yb 이렇게 존재하는 Url이 있다고 가정하면,
+endpoint: http://Ip주소/user/ 이렇게 존재하는 Url이 있다고 가정하면,
 여기서 user/yb가 endpoint이다
 
 >쉽게 말하자면 endPoint는 무엇을하길 원하는걸 client가 말하는 것
