--- a/SpringBoot/springboot+jpa_webapplication/07. member_item_service.md
+++ b/SpringBoot/springboot+jpa_webapplication/07. member_item_service.md
@@ -45,7 +45,7 @@ public class MemberService {
       return  memberRepository.findOne(memberId);
     }
 }
-```
+```java
 ### Item Service
 
 @Service
